<resources>
    <string name="sign_up_member">Đăng Ký Thành Viên</string>
    <string name="app_name">Quản Lý Sổ Địa Chỉ</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="firstName">Tên</string>
    <string name="lastName">Họ</string>
    <string name="email">Email</string>
    <string name="password">Mật Khẩu</string>
    <string name="phone">Số điện Thoại</string>
    <string name="birthday">Ngày Sinh</string>
    <string name="address">Địa Chỉ</string>
    <string name="login">Đăng Nhập</string>
    <string name="forgotpassword">Quên Mật Khẩu?</string>
    <string name="lang">Ngôn Ngữ</string>
    <string name="fullName">Họ Và Tên</string>
    <string name="Confirmpassword">Xác Nhận Mật Khẩu</string>
    <string name="searchbar">Tìm kiếm .... </string>
    <string name="informationOF">Thông tin của </string>
    <string name="createDate">Ngày Tạo</string>
    <string name="status">Trạng thái</string>
    <string name="active_status">Hoạt động</string>
    <string name="pending_status">Chờ xác thực</string>
    <string name="update">Cập Nhật</string>
    <string name="delete">Xóa</string>
    <string name="err_input_invalid">Các trường nhập trống hoặc không hợp lệ</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="update_error">Cập nhật thất bại</string>
    <string name="delete_success">Xóa thành công</string>
    <string name="delete_error">Xóa thất bại</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="err_phone_invalid">Điện thoai không hợp lệ</string>
    <string name="err_email_invalid">Emial không hợp lệ</string>
    <string name="err_phone_">Email không hợp lệ</string>
    <string name="err_the_same_password">Mật khẩu không trùng</string>
    <string name="register_success">Đăng Ký Thành Công</string>
    <string name="register_error">Đăng Ký Thất bại</string>
    <string name="err_get_data">Lấy dữ liệu thất bại</string>
    <string name="user_management">"Quản Lý User"</string>
    <string name="addressbook">"Sổ Địa Chỉ"</string>
    <string name="group_addressbook">"Nhóm Địa Chỉ"</string>
    <string name="title_back_dialog">Bạn đang muốn thoát ứng dụng?</string>
    <string name="accept">Đồng ý</string>
    <string name="close">Đóng lại</string>
    <string name="add_Member">Thêm thành viên</string>
    <string name="add_group">Thêm nhóm</string>
    <string name="name_group">Tên nhóm</string>
    <string name="thongtin_group">Thông tin nhóm</string>
    <string name="logout">Đăng xuất</string>
    <string name="capnhabook">Cập nhật</string>
</resources>
