<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginBottom="10dp"
        android:textColor="#18ade4"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/informationOF"
        android:id="@+id/detailUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/lastName"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="3"
            android:text="@string/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="10dp"
            android:id="@+id/lastNameUser"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:padding="10dp"
            android:id="@+id/firstNameUser"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:padding="10dp"
        android:textColor="#FFF"
        android:background="@android:color/darker_gray"
        android:focusable="false"
        android:id="@+id/emailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:padding="10dp"
        android:id="@+id/phoneUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:padding="10dp"
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <TextView
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:focusable="false"
        android:id="@+id/birthdayUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/addressUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:text="@string/createDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       <TextView
           android:textSize="16dp"
           android:gravity="center"
           android:textStyle="bold"
           android:text="@string/status"
           android:layout_weight="3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/createDateUser"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:padding="10dp"
            android:text="22/10/2019"
            android:background="@android:color/darker_gray"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="10dp"
            android:textColor="#4CAF50"
            android:padding="10dp"
            android:id="@+id/statusUser"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/active_status"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/deleteUser"
            android:textColor="#FFF"
            android:background="#18ade4"
            android:text="@string/delete"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/updateUser"
            android:layout_marginLeft="10dp"
            android:textColor="#FFF"
            android:background="#18ade4"
            android:text="@string/update"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>