<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutdetailuser"
    android:background="#FFF"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/detailUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/add_group"
        android:textColor="#18ade4"
        android:textSize="30dp"
        android:textStyle="bold" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/name_group"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/addgroup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/thongtin_group"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/addgroup_thongtin"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/addgroup_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#18ade4"
        android:text="@string/add_group"
        android:textColor="#FFF"
        android:textStyle="bold" />

</LinearLayout>